feat: further advances with manage-hero form

--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "hero",
       "architect": {
         "build": {
           "builder": "@angular/build:application",
